[package]
name = "RollBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
teloxide = { version = "0.13", features = ["macros"] }
chrono = "0.4.39"
lazy_static = "1.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
